2013-01-19  Julien Bect  <julien.bect@supelec.fr>

	Fixed a numerical issue in stk_filldist_exact().

	* misc/dist/stk_filldist_exact.m: modified. Because of possible
	numerical inaccuracies, centers that are slightly outside the box
	must also be considered as candidates for being ymax.

	Fixed a bug in stk_filldist().

	* misc/dist/stk_filldist.m: modified. Fixed a bug in the
	discretized case (the second output argument was the index of ymax
	instead of ymax itself, as advertised by the documentation).

	Added tests to all fill distance-related functions.

	* misc/dist/stk_filldist_exact.m: added tests.
	* misc/dist/stk_filldist_discretized.m: added tests.
	* misc/dist/stk_filldist.m: added tests.

	Added a second output argument to stk_filldist_discretized().

	* misc/dist/stk_filldist_discretized.m: modified. The function now
	returns, as a second output argument, the point where the maximum
	distance is attained, as expected by stk_filldist().

2013-01-17  Julien Bect  <julien.bect@supelec.fr>

	Completed the documentation of stk_fill_dist and
	stk_filldist_discretized.

	* misc/dist/stk_filldist.m: modified (doc)
	* misc/dist/stk_filldist_discretized.m: modified (doc)

2013-01-14  Julien Bect  <julien.bect@supelec.fr>

	Completed the documentation of stk_filldist_exact.

	* stk_filldist_exact.m: modified (documentation)

	Added a test in stk_filldist.

	* stk_filldist.m: modified (tests)

2013-01-13  Julien Bect  <julien.bect@supelec.fr>

	Ensured that all misc/dist functions accept ".a" structures.

	* misc/dist/stk_dist.m: modified
	* misc/dist/stk_mindist.m: modified
	* misc/dist/stk_filldist.m: modified
	* misc/dist/stk_filldist_discretized.m: modified
	* misc/dist/private/stk_mindist.c: renamed
	* misc/dist/private/stk_filldist_discretized.c: renamed

	Moved misc/dist MEX-files into a private folder.

	* misc/dist/private: new folder
	* misc/dist/stk_dist_pairwise.c: moved to misc/dist/private
	* misc/dist/stk_dist_matrixx.c: idem